Refined some of the interests page content. Still writing. I understand my commits are not pretty haha.

--- a/index.html
+++ b/index.html
@@ -1016,6 +1016,11 @@
 		};
 		loadFile("res/img/terminal.svg",null,main);
 		window.addEventListener('resize',adjustScale);
+		/*
+		I should have just finished one of my architectures and wrote an emulator for it along with the IO.
+		That would have been the kool kid way to do it.
+		That will be next!
+		*/
 	</script>
 	<style>
 		body {
