Got base cookies setup with minimal formatting.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>COBOL Website</title>
+	<title>Blake Karbon's Web Portfolio</title>
 </head>
 <body>
 	<noscript>
@@ -16,5 +16,6 @@
 			Module.ccall ("MAIN", null, [], []);
     		}
 	</script>
+	<div>Copyright Here</div>
 </body>
 </html>
