--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <body>
 	<noscript>
 		Oh so your a cool kid? No javascript? U on a microwave or something?
+		<div>© Blake Karbon. All rights reserved.</div>
 	</noscript>
 	<script src="build/web/main.js"></script>
 	<script>
@@ -16,6 +17,5 @@
 			Module.ccall ("MAIN", null, [], []);
     		}
 	</script>
-	<div>Copyright Here</div>
 </body>
 </html>
