--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 		Oh so your a cool kid? No javascript? U on a microwave or something?
 		<div>© Blake Karbon. All rights reserved.</div>
 	</noscript>
+	<link rel="stylesheet" href="node_modules/@xterm/xterm/css/xterm.css" />
+	<script src="node_modules/@xterm/xterm/lib/xterm.js"></script>
 	<script src="build/web/main.js"></script>
 	<script>
 		Module['onRuntimeInitialized'] = function() {
